Fix Bug 334612 - Selecting text and pressing enter doesn't replace the text but only adds a newline

FIXED-IN: 4.13.1
BUG: 334612